migration from start.sh to go-migrate
